.metadata/.plugins/org.eclipse.cdt.ui/lista_enc_v2.build.log
22:20:37 **** Incremental Build of configuration Debug for project lista_enc_v2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\dados.o" "..\\src\\dados.c" 
..\src\dados.c: In function 'ler_arquivo':
..\src\dados.c:40:18: error: redeclaration of 'lista' with no linkage
     lista_enc_t *lista =  criar_lista_enc();  //cria lista encadeada
                  ^~~~~
..\src\dados.c:33:18: note: previous declaration of 'lista' was here
     lista_enc_t *lista;
                  ^~~~~
..\src\dados.c:42:16: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
     FILE* fp = ler_arquivo(nome_do_arquivo);  //abre arquivo csv
                ^~~~~~~~~~~
..\src\dados.c:53:35: error: 'nome_1' undeclared (first use in this function)
        elemento = criar_no((void*)nome_1);
                                   ^~~~~~
..\src\dados.c:53:35: note: each undeclared identifier is reported only once for each function it appears in
..\src\dados.c:51:19: warning: unused variable 'dados' [-Wunused-variable]
           dado_t* dados = cria_dado();
                   ^~~~~
..\src\dados.c:61:10: warning: unknown escape sequence: '\)'
     puts("Hello ;-\)");
          ^~~~~~~~~~~~
..\src\dados.c:34:13: warning: unused variable 'dados' [-Wunused-variable]
     dado_t* dados ;
             ^~~~~
..\src\dados.c: In function 'imprimi_dados_lista':
..\src\dados.c:73:11: warning: unknown escape sequence: '\)'
      puts("Bye ;-\)");
           ^~~~~~~~~~

22:20:38 Build Finished (took 570ms)

